--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "postgres": "^3.4.8",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "resend": "^6.9.2",
     "slugify": "^1.6.6",
+    "stripe": "^20.3.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
+    "vite-plugin-pwa": "^1.2.0",
     "zod": "^3.25.76"
   }
 }
